# dlcv-trial

./: .gitignore  CLAUDE.md  README.md  commands.sh  main.py  models.py  prepare_data.sh  pyproject.toml  tools.py
answer_normalizer/: README.md  __init__.py  demo.py  main.py  model.py  predict.py  train.py
answer_normalizer/agent/: __init__.py  demo.py  normalizer.py  prompt.py
answer_normalizer/lm/: __init__.py  demo.py  normalizer.py  prompt.py
answer_normalizer/ml/: normalizer.py  train.py
answer_normalizer/utils/: dataset.py  demo.py  extract_data.py
question_classifier/: __init__.py  demo.py  inference.py  predict.py  question_classifier.pkl  result.json  train.py
question_classifier/utils/: demo.py  extract_data.py
